style: fix various layout issues

--- a/src/styles/components/mobileBottomNav.css
+++ b/src/styles/components/mobileBottomNav.css
@@ -48,6 +48,12 @@
     color: var(--colors-blue-500);
   }
 
+  @media (max-width: 425px) {
+    nav.mobile-nav ul li a {
+      width: auto;
+    }
+  }
+
   @media (prefers-color-scheme: dark) {
     .mobile-nav {
       background-color: var(--colors-neutral-950);
